--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
   background-color: #087E8B;
   background-image: linear-gradient(-45deg, #FFC914, #087E8B);
   color: white;
+  margin-bottom: 5em;
 }
 
 a {
@@ -101,12 +102,25 @@ a:focus {
   font-size: 3em;
   text-align: center;
   position: absolute;
-  top: 12px;
+  top: -24px;
   left: 50%;
   letter-spacing: 6px;
   transform: translateX(-50%);
   margin: 0;
   z-index: 3;
+  line-height: .9;
+}
+
+.titulo h2 {
+  position: absolute;
+  bottom: 8px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 1em;
+  z-index: 3;
+  text-align: center;
+  line-height: 1;
+  width: 100%;
 }
 
 .titulo .gris {
@@ -603,6 +617,31 @@ header {
   vertical-align: middle;
 }
 
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #3d3d3d;
+  z-index: 999;
+}
+
+footer .logos {
+  text-align: center;
+}
+
+footer .logos a {
+  border: none;
+}
+
+footer .logos img {
+  height: 23px;
+  padding: 0.2em;
+}
+
+footer .logos img:hover {
+  opacity: .8;
+}
+
 
 @media only screen and (min-width: 600px) {
   .titulo {
@@ -619,6 +658,21 @@ header {
 
   section h2 {
     text-align: left;
+  }
+
+  .titulo h1 {
+    top: 12px;
+    line-height: 1;
+  }
+
+  .titulo h2 {
+    bottom: 2px;
+    font-size: 1.2em;
+  }
+
+  footer .logos img {
+    height: 60px;
+    padding: .7em;
   }
 }
 
