--- a/css/style.css
+++ b/css/style.css
@@ -164,10 +164,12 @@ h4 {
 }
 
 #res {
+  display: none;
   margin: 2em 0;
   padding: 0;
   vertical-align: top;
   width: 100%;
+  height: 100vh;
   text-align: center;
 }
 
